tests/NormalTests/paczka1/fuzzy1/26999845.err
Error in line 6: 7JfGApuukW S664 53,2
Error in line 3: dTJYi3D S710 97,2
Error in line 8: 7JfGApuukW S710 83,3
Error in line 15: 7JfGApuukW S268 70,9
Error in line 18: 7JfGApuukW S493 60,3
Error in line 34: dTJYi3D S710 5,4
Error in line 38: BJLNnlHn5O0 S710 -1,1
Error in line 20: uMcssEfp S664 36,4
